# garijp-coachteam-backend

./: .env.dev  .env.production  DEPLOYMENT.md  Dockerfile  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml  schedule_banana_schedule.csv  schedule_coverage_grid.csv  schedule_full_assignments.csv  schedule_instructor_schedule.csv  schedule_instructor_timeline.csv  schedule_statistics.csv  schedule_student_timeline.csv  schedule_transfers.csv
backend/: Dockerfile  main.py  pyproject.toml
frontend/: Dockerfile  next.config.ts  next.config.ts.template
nginx/: Dockerfile  default.conf  default.conf.template  ssl-setup.sh
scripts/: build.sh  dev.sh  generate.sh  run.sh  run_both.sh
src/: Dockerfile  main.py  webhook.py
src/backend/: main.py
src/backend/banaan/: README.md  config.json  main.py  output.py  solver.py  solver_v2.py
src/backend/banaan/week3/: Bakindeling - JZ.csv  Bakindeling - KB.csv  (+4 more)
src/backend/endpoints/: banaan.py  examples.py  roster.py
src/backend/roster/: config.json  example_input.json  main.py  models.py  output.py  solver.py
src/banaan/: config.json  example_input.csv  example_instructors_garijp.csv  example_output.csv_banana_schedule.csv  example_output.csv_full_assignments.csv  example_output.csv_instructor_schedule.csv  example_output.xlsx  main.py  models.py  output.py  solver.py  week3_output_banana_schedule.csv  week3_output_full_assignments.csv  week3_output_instructor_schedule.csv
src/banaan/week3/: Bakindeling - Surf.csv  Bakindeling - ZB.csv
src/endpoints/: auth.py  banaan.py  roster.py
src/roster/: main.py  models.py  output.py  solver.py
tests/: test_banaan.py
(+4 files in other folders)
