[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [{ name = "AAperghis", email = "albert@aperghis.nl" }]
requires-python = ">=3.12,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastapi[standard]>=0.115.14,<0.116",
    "ortools>=9.14.6206,<10",
    "pandas>=2.2,<3",
    "openpyxl>=3.1,<4",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
]

[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
